--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
                 Message
             </h2>
             <p data-aos-delay="300" data-aos="fade-down" data-aos-duration="750">
-                Pesan gua untuk orang-orang diluar sana, cobalah membuka fikiran, jangan mau terjebak sama fikiran yang sempit. Engga, gua belajar Filsafat gak jadi Atheis. Engga, gua belajar ideologi-ideologi itu gak jadi gila. Belajar hal-hal itupun gak mewajibkan lu untuk setuju, lu bisa mengkritisi juga dan lu bisa gak setuju. Setidaknya lu belajar dan memahaminya, bukan membenci buta.
-                <br>
-                Satu hal juga, jika lu pun gak setuju sama opini seseorang, bukan berarti lu harus membenci orang tersebut.
+                Pesan gua untuk orang-orang diluar sana, cobalah membuka fikiran, jangan mau terjebak sama fikiran yang sempit. Engga, gua belajar Filsafat gak jadi Atheis. Engga, gua belajar ideologi-ideologi itu gak jadi gila. Belajar hal-hal itupun gak mewajibkan lu untuk setuju, lu bisa mengkritisi juga dan lu bisa gak setuju. Lu juga punya kebebasan buat milih mana yang lu pegang mana yang enggak, itu juga gua lakuin. Setidaknya lu belajar dan memahaminya, bukan membenci buta. Satu hal juga, jika lu pun gak setuju sama opini seseorang, bukan berarti lu harus membenci orang tersebut.
             </p>
         </div>
     </div>
