--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             Surat Kalian
             <small>
                 Zulfahmi Ardiansah
+                <span>
+                    Illustration by <a href="https://absurd.design/">absurd.design</a>
+                </span>
             </small>
         </h1>
     </div>
